--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,16 @@
 		 webvisor:true
 	});
  </script>
+		<meta charset="UTF-8">
+		<meta http-equiv="refresh" content="0; url=/my_cv">
+		<script type="text/javascript">
+    var redirectTo = window.location.pathname;
+    if (!redirectTo.startsWith('/my_cv')) {
+      window.location.replace('/my_cv');
+    } else {
+      window.location.replace('/my_cv');
+    }
+  </script>
 		<script type="text/javascript">
 	var redirectTo = window.location.pathname;
 	if (!redirectTo.startsWith('/my_cv')) {
