--- a/public/index.html
+++ b/public/index.html
@@ -3,75 +3,58 @@
 	<head>
 		<!-- Yandex.Metrika counter -->
 		<script type="text/javascript">
-	(function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
-	m[i].l=1*new Date();
-	for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
-	k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
-	(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
- 
-	ym(98653381, "init", {
-		 clickmap:true,
-		 trackLinks:true,
-		 accurateTrackBounce:true,
-		 webvisor:true
-	});
- </script>
-		<meta charset="UTF-8">
-		<meta http-equiv="refresh" content="0; url=/my_cv">
-		<script type="text/javascript">
-    var redirectTo = window.location.pathname;
-    if (!redirectTo.startsWith('/my_cv')) {
-      window.location.replace('/my_cv');
-    } else {
-      window.location.replace('/my_cv');
-    }
-  </script>
-		<script type="text/javascript">
-	var redirectTo = window.location.pathname;
-	if (!redirectTo.startsWith('/my_cv')) {
-	  redirectTo = '/my_cv';
-	}
-	window.location.replace('/my_cv' + redirectTo.substring(7));
-  </script>
+      (function(m, e, t, r, i, k, a) {
+        m[i] = m[i] || function() {
+          (m[i].a = m[i].a || []).push(arguments)
+        };
+        m[i].l = 1 * new Date();
+        for (var j = 0; j < document.scripts.length; j++) {
+          if (document.scripts[j].src === r) {
+            return;
+          }
+        }
+        k = e.createElement(t), a = e.getElementsByTagName(t)[0], k.async = 1, k.src = r, a.parentNode.insertBefore(k, a)
+      })(window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
 
-		<noscript><div><img src="https://mc.yandex.ru/watch/98653381"
-					style="position:absolute; left:-9999px;" alt /></div></noscript>
+      ym(98653381, "init", {
+        clickmap: true,
+        trackLinks: true,
+        accurateTrackBounce: true,
+        webvisor: true
+      });
+    </script>
+
+		<noscript>
+			<div>
+				<img src="https://mc.yandex.ru/watch/98653381"
+					style="position:absolute; left:-9999px;" alt />
+			</div>
+		</noscript>
 		<!-- /Yandex.Metrika counter -->
 		<meta charset="utf-8" />
 		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="theme-color" content="#000000" />
-		<meta
-			name="description"
-			content="Web site created using create-react-app" />
+		<meta name="description" content="Web site created using create-react-app" />
 		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
 		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
 		<title>ru-developer</title>
 	</head>
 	<body>
 		<noscript>You need to enable JavaScript to run this app.</noscript>
 		<div id="root"></div>
-		<!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+		<script type="text/javascript">
+      // Перенаправление на главную страницу при неправильном маршруте
+      (function() {
+        var allowedRoutes = ["/my_cv", "/my_cv/projects", "/my_cv/about", "/my_cv/contact"];
+        var currentPath = window.location.pathname;
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    --></body>
+        // Если путь не совпадает с разрешенными маршрутами, перенаправляем на главную
+        if (!allowedRoutes.includes(currentPath)) {
+          window.location.href = "/my_cv";
+        }
+      })();
+    </script>
+	</body>
 </html>
