--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<!-- Yandex.Metrika counter -->
-		<script type="text/javascript">
+  <head>
+    <!-- Yandex.Metrika counter -->
+    <script type="text/javascript">
       (function(m, e, t, r, i, k, a) {
         m[i] = m[i] || function() {
           (m[i].a = m[i].a || []).push(arguments)
@@ -24,37 +24,25 @@
       });
     </script>
 
-		<noscript>
-			<div>
-				<img src="https://mc.yandex.ru/watch/98653381"
-					style="position:absolute; left:-9999px;" alt />
-			</div>
-		</noscript>
-		<!-- /Yandex.Metrika counter -->
-		<meta charset="utf-8" />
-		<link rel="icon" href="%PUBLIC_URL%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<meta name="theme-color" content="#000000" />
-		<meta name="description" content="Web site created using create-react-app" />
-		<link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-		<link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-		<title>ru-developer</title>
-	</head>
-	<body>
-		<noscript>You need to enable JavaScript to run this app.</noscript>
-		<div id="root"></div>
-
-		<script type="text/javascript">
-      // Перенаправление на главную страницу при неправильном маршруте
-      (function() {
-        var allowedRoutes = ["/my_cv", "/my_cv/projects", "/my_cv/about", "/my_cv/contact"];
-        var currentPath = window.location.pathname;
-
-        // Если путь не совпадает с разрешенными маршрутами, перенаправляем на главную
-        if (!allowedRoutes.includes(currentPath)) {
-          window.location.href = "/my_cv";
-        }
-      })();
-    </script>
-	</body>
+    <noscript>
+      <div>
+        <img src="https://mc.yandex.ru/watch/98653381"
+          style="position:absolute; left:-9999px;" alt />
+      </div>
+    </noscript>
+    <!-- /Yandex.Metrika counter -->
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description"
+      content="Web site created using create-react-app" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <title>ru-developer</title>
+  </head>
+  <body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+  </body>
 </html>
